removed previous users, add openapi reference for 401
